<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SuzyTodos</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Welcome to Suzy Todos</string>
    <string name="addtodo">Add todo</string>
    <string name="todo">Todo</string>
    <string name="un">Welcome <xliff:g id="n2">%S</xliff:g></string>
</resources>
